> - it now sends the [/america](https://discord.com/channels/977254354589462618/1160224987853115433/1160239801904152588) chances (instead of the [american national anthem](https://discord.com/channels/977254354589462618/1160224987853115433/1160239815271383141))

### <a:slash_command:1148866611227414568> </cmd:1160259589435048046> `pancake`
> - added `h`, `cmd`, `command`, and `cmds` as aliases

### <a:slash_command:1148866611227414568> </cmd:1160259589435048046> `pancake`
> - added `p` as an alias

### <a:slash_command:1148866611227414568> </view-join-dates at-position:1162852142550352037>, </view-join-dates for-member:1162852142550352037>
> - renamed from <:area_communities_bot:1135719948224843856> **`/who-joined-at by-position`** and <:area_communities_bot:1135719948224843856> **`/who-joined-at by-position`**
>  - this is because the old command names were pretty confusing/didn't fit well
> - removed `check-first-join` option
>  - this has been merged with the command, which'll show both current and historical members

### suggestions ✨
> - removed default reactions ⬆️ ↔️ ⬇️ from new posts

### support ✨
> - log messages relating to the role created to @mention the Moderation Team in tickets (in https://discord.com/channels/977254354589462618/1072945802256855170 and https://discord.com/channels/977254354589462618/1082650454044979210) are now automatically bulk-deleted within 1 minutes
>  - ..however, the "bulk delete" log isn't deleted (it's staying as a rough "reference" as to when tickets get created/deleted i guess)

## <:happ:906683365791502366> bugs fixed

### support ✨
> - fixed your roblox username sometimes not being automatically filled in (if your account was verified through <@426537812993638400>) when creating a ticket in https://discord.com/channels/977254354589462618/1072945802256855170 or https://discord.com/channels/977254354589462618/1082650454044979210
>  - in other words, <@983126054619189370> was updated to use the <@426537812993638400> v4 api